3.4
	+ Migrated to use Plack / PSGI API instead of the CGI one
	+ Remove obsolete sope dependency
	+ Added rpcproxy service to zentyal-webserver for Outlook Anywhere
	+ Calendar invitations now sent via email by default
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
	+ Fixed migration form that is missing a .js file to work
	+ Hide openchange service status from the dashboard and linked it status
	  to the one from Samba
	+ User addon - remove check that require AD domain to be the same as mail
	  virtual domain
	+ Added basic deprovision option
	+ Fixed a typo that makes openchange appear always off on Dashboard
	+ Added vdomain selection for outgoing mail at provision screen
3.3
	+ Added a dependency on the zoctools package to handle the server migration
	+ Updated to use the new communication protocol with the upgrade tool
	+ Show new organization selector by default and block Provision submit
	  with empty Organization Names
	+ Added sieve features
	+ Added autodiscovery of server parameters
	+ Removed the deprovision option, it needs more work to be useful
	+ Extract the list of existing organization names from AD for better user
	  experience
	+ Removed the selector of Administrative Group using the default one for
	  existing organizations and falling back to the default 'First
	  Administrative Group' for new installations. Exchange 2007 deprecated
	  those kind of groups
	+ Added a way to retrieve existing Organization Names
	+ Use ou=Users as baseDN in sogo.conf if openchange_disable_multiou=yes
	+ Changed field names to use the same terminology on Exchange
	  installations
	+ Added the firstorg and firstou arguments also when provisioning the
	  openchangedb and newuser part
	+ Switch from Error to TryCatch for exception handling
	+ Use new enableInnoDbIfNeeded() from core
	+ Mailbox migration user interface
	+ Disable mode select when provisioned
3.1.1
	+ Implement additional openchange server deployment