@@ -7,8 +7,9 @@ Standards-Version: 3.9.2
 
 Package: zentyal-openchange
 Architecture: all
+<<<<<<< HEAD:main/openchange/debian/control
 Depends: zentyal-core (>= 3.4~1), zentyal-core (<< 3.5),
-         zentyal-mail, zentyal-samba, zentyal-webserver,
+         zentyal-mail, zentyal-samba, libapache2-mod-wsgi,
          openchangeserver (>= 1:2.0-2~20140205-1),
          openchange-rpcproxy, libstring-random-perl,
          sogo-openchange (>= 2.1.0-zentyal6),
