@@ -1,0 +1,86 @@
+<%doc>
+    Template to set the apache configuration file for Outlook Anywhere service.
+
+Parameters:
+
+    bindaddress          - String the bind address.
+                           Default value: 127.0.0.1
+    port                 - Int the listening port.
+                           Default value: 62080
+    rpcproxyAuthCacheDir - The directory to use as the auth cache.
+    tmpdir - String the path to the Apache temporary directory
+   group - String the group that must live apache-perl process
+           Default value: www-data
+   user  - String the user that the apache-perl process must be
+           Default value: www-data
+</%doc>
+<%args>
+  $bindaddress => '127.0.0.1'
+  $port => 62080
+  $rpcproxyAuthCacheDir
+  $tmpdir
+  $group => 'www-data'
+  $user => 'www-data'
+</%args>
+
+
+Timeout 300
+KeepAlive On
+## The extremely high timeout is required by outlook
+KeepAliveTimeout 120
+MaxKeepAliveRequests 500
+AddDefaultCharset utf-8
+
+PidFile <% $tmpdir %>/apache-oc.pid
+
+StartServers 5
+MinSpareServers 5
+MaxSpareServers 10
+MaxClients 150
+MaxRequestsPerChild 0
+
+Include /etc/apache2/mods-available/auth_basic.load
+Include /etc/apache2/mods-available/authn_file.load
+Include /etc/apache2/mods-available/authz_default.load
+Include /etc/apache2/mods-available/authz_groupfile.load
+Include /etc/apache2/mods-available/authz_host.load
+Include /etc/apache2/mods-available/authz_user.load
+Include /etc/apache2/mods-available/autoindex.load
+Include /etc/apache2/mods-available/cgi.load
+Include /etc/apache2/mods-available/deflate.conf
+Include /etc/apache2/mods-available/deflate.load
+Include /etc/apache2/mods-available/dir.conf
+Include /etc/apache2/mods-available/dir.load
+Include /etc/apache2/mods-available/env.load
+Include /etc/apache2/mods-available/negotiation.load
+Include /etc/apache2/mods-available/setenvif.load
+Include /etc/apache2/mods-available/rewrite.load
+Include /etc/apache2/mods-available/status.load
+Include /etc/apache2/mods-available/perl.load
+Include /etc/apache2/mods-available/expires.load
+Include /etc/apache2/mods-available/wsgi.load
+
+Listen <% $bindaddress %>:<% $port %>
+
+user <% $user %>
+group <%group %>
+
+ErrorLog /var/log/zentyal/outlook-anywhere-error.log
+LogLevel warn
+
+LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" \"%{forensic-id}n\"" combined
+CustomLog /var/log/zentyal/outlook-anywhere-access.log combined
+
+WSGILazyInitialization On
+WSGIPythonPath /opt/samba4/lib/openchange/web/rpcproxy
+
+<Directory /opt/samba4/lib/openchange/web/rpcproxy/>
+  SetEnv RPCPROXY_LOGLEVEL INFO
+  SetEnv NTLMAUTHHANDLER_WORKDIR <% $rpcproxyAuthCacheDir %>
+  SetEnv SAMBA_HOST 127.0.0.1
+  WSGIPassAuthorization On
+  WSGIProcessGroup %{GLOBAL}
+</Directory>
+
+WSGIScriptAlias /rpc/rpcproxy.dll /opt/samba4/lib/openchange/web/rpcproxy/rpcproxy.wsgi
+WSGIScriptAlias /rpcwithcert/rpcproxy.dll /opt/samba4/lib/openchange/web/rpcproxy/rpcproxy.wsgi
